# musidy

./: .gitignore  CMakeLists.txt  Makefile  musidy.pc.in
include/musidy/: Instrument.hpp  Musidy.hpp
include/musidy/songCreation/: MusicScore.hpp  ScoreGenerator.hpp  ScorePlayer.hpp  chordProgressions.hpp
source/: Instrument.cpp  Musidy.cpp  SoundSystem.cpp  utils.cpp
source/songCreation/: MusicScore.cpp  ScoreGenerator.cpp  ScorePlayer.cpp  chordProgressions.cpp  noteUtils.cpp
